Added Kraken2 support.

--- a/example/config.yaml
+++ b/example/config.yaml
@@ -4,3 +4,4 @@ transcriptome ref: '/example/transcripts.fa.ndx'
 multiqc title: 'BVI RNA-seq'
 multiqc description: 'Initial metric review of sets #1 and #2.'
 sample key: '/example/sample_key.tsv'
+kraken db: '/example/krakenDB/16S_Greengenes_k2db'
